<resources>
    <string name="app_name">Mobi Account</string>
    <string-array name="spinner_array" translatable="false">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="status_array" translatable="false">
        <item>Income</item>
        <item>Expense</item>
    </string-array>


    <string name="action_settings">Settings</string>
    <string name="add_expense">Add expense</string>
    <string name="add_income">Add income</string>
    <string name="amount">Amount</string>
    <string name="cancel">Cancel</string>
    <string name="custom_expense">Custom expense</string>
    <string name="custom_income">Custom income</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="done">Done</string>
    <string name="expense_chart">Expense Chart</string>
    <string name="expense_type">Type</string>
    <string name="expenses">Expenses</string>
    <string name="from">From</string>
    <string name="hint_details">Details</string>
    <string name="hint_pick_the_type">Pick the type</string>
    <string name="hint_view_statistics">View statistics</string>
    <string name="income">Income</string>
    <string name="income_chart">Income Chart</string>
    <string name="margin">Margin</string>
    <string name="minus_sign">-</string>
    <string name="new_expense">New Expense</string>
    <string name="new_income">New Income</string>
    <string name="no_expenses_in_this_period">You do not have any expenses\nlogged during this period</string>
    <string name="no_income_in_this_period">You do not have any income\nlogged during this period</string>
    <string name="no_items_string">Start by noting down your income or expense</string>
    <string name="ok">OK</string>
    <string name="other_ellipsized">Other…</string>
    <string name="pick_expense_type">Pick expense type</string>
    <string name="pick_income_type">Pick income type</string>
    <string name="please_pick_the_type">Please, pick the type</string>
    <string name="plus_sign">+</string>
    <string name="save">New</string>
    <string name="title_activity_item_details">Item Details</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="to">To</string>
    <string name="undo">Undo</string>
    <string name="value_is_too_large">Value is too large</string>
    <string name="view_stats">View Stats</string>
</resources>
